tf-aws-personal/loadbalancer.tf
# resource "aws_lb" "app_lb" {
#     name               = "app-loadbalancer"
#     internal           = false
#     load_balancer_type = "application"
#     security_groups    = [aws_security_group.lb_sg.id]
#     subnets            = [aws_subnet.public1.id, aws_subnet.public2.id]
# }

# resource "aws_lb_target_group" "app_tg" {
#     name     = "app-tg"
#     port     = 80
#     protocol = "HTTP"
#     vpc_id   = aws_vpc.main.id

#     health_check {
#         path                = "/"
#         protocol            = "HTTP"
#         matcher             = "200"
#         interval            = 30
#         timeout             = 5
#         healthy_threshold   = 2
#         unhealthy_threshold = 2
#     }
# }

# resource "aws_lb_listener" "app_listener" {
#     load_balancer_arn = aws_lb.app_lb.arn
#     port              = 80
#     protocol          = "HTTP"

#     default_action {
#         type             = "forward"
#         target_group_arn = aws_lb_target_group.app_tg.arn
#     }
# }

# resource "aws_lb_target_group_attachment" "ec2_1" {
#     target_group_arn = aws_lb_target_group.app_tg.arn
#     target_id        = aws_instance.ec2_1.id
#     port             = 80
# }

# resource "aws_lb_target_group_attachment" "ec2_2" {
#     target_group_arn = aws_lb_target_group.app_tg.arn
#     target_id        = aws_instance.ec2_2.id
#     port             = 80
# }
